# debian.packaging.flex

./: ChangeLog  FlexLexer.h  Makefile.am  Makefile.in  NEWS  README.md  _config.yml  aclocal.m4  conf.in  config.guess  configure  configure.ac  configure.in  depcomp  dfa.c  filter.c  flex.skl  flex.spec  flex_2.5.31.orig.tar.gz.delta  flex_2.5.31.orig.tar.gz.id  flex_2.5.33.orig.tar.gz.delta  flex_2.5.33.orig.tar.gz.id  flex_2.5.34.orig.tar.gz.delta  flex_2.5.34.orig.tar.gz.id  flex_2.5.35.orig.tar.gz.delta  flex_2.5.35.orig.tar.gz.id  flex_2.5.39.orig.tar.gz.delta  flex_2.6.0.orig.tar.gz.delta  flex_2.6.0.orig.tar.gz.id  flex_2.6.1.orig.tar.gz.delta  flex_2.6.1.orig.tar.gz.id  flex_2.6.4.orig.tar.gz.delta  flex_2.6.4.orig.tar.gz.id  flexdef.h  gen.c  index.html  initscan.c  install-sh  main.c  nfa.c  (+4 more)
_layouts/: default.html
_posts/: 2014-06-20-Fix-build-depends.markdown
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: NEWS.Debian  changelog  clean  control  flex-doc.docs  flex.docs  flex.links  libfl2.docs  libfl2.install  rules  watch
doc/: Makefile.am  Makefile.in  flex.1  flex.info  flex.info-1  flex.info-2  flex.info-3  flex.info-4  flex.info-5  flex.info-6  flex.info-7  flex.texi  stamp-vti  texinfo.tex
examples/: Makefile.in
lib/: Makefile.am  malloc.c
m4/: Makefile.in
po/: Makefile  Makefile.in.in  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  eo.po  es.gmo  es.po  fi.po  flex.pot  fr.gmo  fr.po  ga.gmo  ga.po  hr.po  ko.gmo  ko.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  ru.gmo  ru.po  sr.po  sv.gmo  sv.po  (+7 more)
(+67 files in other folders)
